# czsc_me

./: .gitignore  Cargo.toml  prompt.txt
chan.py/: .gitignore  Chan.py  pyproject.toml
chan.py/KLine/: KLine_List.py
chan_cli/: Cargo.toml
chan_cli/src/: main.rs
chan_core/: Cargo.toml
chan_core/src/: lib.rs
chan_core/src/analyzer/: analyzer.rs  mod.rs
chan_core/src/bi/: bi.rs  bi_config.rs  bi_list.rs  mod.rs
chan_core/src/buy_sell_point/: bs_point.rs  bs_point_config.rs  bs_point_list.rs  mod.rs
chan_core/src/common/: cache.rs  cenum.rs  chan_exception.rs  enums.rs  func_util.rs  handle.rs  macros.rs  mod.rs  time.rs  utils.rs
chan_core/src/config/: chan_config.rs  mod.rs
chan_core/src/kline/: kline.rs  kline_list.rs  kline_unit.rs  mod.rs
chan_core/src/math/: boll.rs  demark.rs  kdj.rs  macd.rs  mod.rs  rsi.rs
chan_core/src/seg/: eigen.rs  eigen_fx.rs  mod.rs  seg.rs  seg_list_chan.rs  seg_list_comm.rs
chan_core/src/traits/: bi_trait.rs  line_trait.rs  mod.rs
chan_core/src/zs/: mod.rs  zs.rs  zs_config.rs  zs_list.rs
