[workspace]
members = [
    "chan_core",
    "chan_cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Chan analysis implementation in Rust"
license = "MIT"

[workspace.dependencies]
# Common dependencies
chrono = "0.4"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
strum = "0.25"
strum_macros = "0.25"

# Internal dependencies
chan_core = { path = "chan_core" } 