[package]
name = "chan_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
chan_core = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
